# =================================================================================================
# Copyright (C) 2025 GRAPE Contributors
# =================================================================================================

declare_module(
  NAME camera
  DEPENDS_ON_MODULES "log"
  DEPENDS_ON_EXTERNAL_PROJECTS "SDL3")

add_subdirectory(apps)
